--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         max-width: 54rem;
         padding: 0 1rem;
         margin: 0 auto;
+        height: 100%;
       }
       /*!
        * table-grid (http://mdo.github.io/table-grid)
@@ -72,7 +73,7 @@
   <body>
     <div class="container">
       <div class="grid-padded">
-        <div class="grid">
+        <div class="grid grid-align-middle">
           <div class="col">
             <h1>logo goes here</h1>
           </div>
