--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         max-width: 54rem;
         padding: 0 1rem;
         margin: 0 auto;
+      }
+      body, .container {
         height: 100%;
       }
       /*!
