--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         color: #fff;
         background-color: #555;
       }
+      html, body {
+        height: 100%;
+      }
       .container {
         max-width: 54rem;
         padding: 0 1rem;
