--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         padding: 0 1rem;
         margin: 0 auto;
       }
-      body, .container {
+      body, .container, .grid, .grid-padded, .grid-padded .grid,  .grid-align-middle {
         height: 100%;
       }
       /*!
@@ -76,13 +76,15 @@
     </style>
   </head>
   <body>
-    <div class="grid-padded">
-      <div class="grid grid-align-middle">
-        <div class="col">
-          <h1>logo goes here</h1>
-        </div>
-        <div class="col">
-          <h1>WEFT 90.1 fm</h1>
+    <div class="container">
+      <div class="grid-padded">
+        <div class="grid grid-align-middle">
+          <div class="col">
+            <h1>logo goes here</h1>
+          </div>
+          <div class="col">
+            <h1>WEFT 90.1 fm</h1>
+          </div>
         </div>
       </div>
     </div>
