--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="grid-padded">
         <div class="grid grid-align-middle">
           <div class="col">
-            <img src="http://new.weft.org/img/WEFT_Logo_with_mic.jpg">
+            <img src="http://i1.ytimg.com/vi/dV09EdxZ_JU/maxresdefault.jpg">
           </div>
           <div class="col">
             <h1>WEFT 90.1 fm</h1>
