--- a/index.html
+++ b/index.html
@@ -73,6 +73,33 @@
       img {
         max-width: 100%;
       }
+      .h1 {
+        font-size: 6em;
+        color: #08c;
+        text-align: center;
+        font-family: "Bree Serif";
+        text-shadow: rgb(11, 78, 65) 1px 1px,
+        rgb(11, 78, 65) 2px 2px,
+        rgb(11, 78, 65) 3px 3px,
+        rgb(11, 78, 65) 4px 4px,
+        rgb(11, 78, 65) 5px 5px,
+        rgb(11, 78, 65) 6px 6px,
+        rgb(11, 78, 65) 7px 7px,
+        rgb(11, 78, 65) 8px 8px,
+        rgb(11, 78, 65) 9px 9px,
+        rgb(11, 78, 65) 10px 10px,
+        rgb(11, 78, 65) 11px 11px,
+        rgb(11, 78, 65) 12px 12px,
+        rgb(11, 78, 65) 13px 13px,
+        rgb(11, 78, 65) 14px 14px,
+        rgb(11, 78, 65) 15px 15px,
+        rgb(11, 78, 65) 16px 16px,
+        rgb(11, 78, 65) 17px 17px,
+        rgb(11, 78, 65) 18px 18px,
+        rgb(11, 78, 65) 19px 19px,
+        rgb(11, 78, 65) 20px 20px;
+        margin: -15px 0 0 0;
+    }
     </style>
   </head>
   <body>
