tighten up all around, post to production server

--- a/partners/index.html
+++ b/partners/index.html
@@ -6,7 +6,7 @@ layout: default
         <div class="pure-g-r">
           <div class="pure-u-5-5">
             <h3 class="page-title">Community Partners</h3>
-            <p>WEFT is grateful for the local businesses and organizations that support the programming on the station.  If your business is interested in <a title="Become A WEFT Community Partner" href="http://weft.org/support-us/community-partners/become-a-weft-community-partne/">becoming a Community Partner</a> and a supporting a program on WEFT, contact our Community Partners Coordinator, at <a href="mailto:underwriting@weft.org">communitypartners@weft.org</a>, or call WEFT at <a href="tel:217-359-9338">217-359-9338</a>.</p>
+            <p>WEFT is grateful for the local businesses and organizations that support the programming on the station.  If your business is interested in becoming a Community Partner and a supporting a program on WEFT, contact our Community Partners Coordinator, at <a href="mailto:underwriting@weft.org">communitypartners@weft.org</a>, or call WEFT at <a href="tel:217-359-9338">217-359-9338</a>.</p>
             <h2>A Special Thanks to Our Community Partners!</h2>
             <ul clas="pure-g-r">
               <li><a title="Big Grove Tavern" href="http://www.biggrovetavern.com/" target="_blank">Big Grove Tavern </a></li>
