--- a/support/index-during-spring-pledge-drive.html
+++ b/support/index-during-spring-pledge-drive.html
@@ -1,52 +1,9 @@
-<!DOCTYPE html>
-<html lang="en-US">
-
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>WEFT</title>
-    <meta name="description" content="Community radio based in Champaign-Urbana, Illinois since 1981.">
-    <meta name="author" content="Brian Zelip">
-    <meta name="keywords" content="WEFT, community radio, 90.1, Champaign, Urbana, Illinois">
-    <meta property="og:title" content="WEFT">
-    <meta property="og:type" content="radio">
-    <meta property="og:url" content="/support/">
-    <meta property="og:image" content="http://weft.org/img/WEFT_Logo_with_mic.jpg">
-    <link rel="canonical" href="">
-  </head>
-
-  <body>
-
-    <header>
-      <nav>
-        <div class="nav">
-          <div class="pure-menu pure-menu-open pure-menu-horizontal">
-            <ul>
-              <li><a href="/">WEFT</a></li>
-              <li><a href="/listen">Listen Live</a></li>
-              <li><a href="/support">Support WEFT</a></li>
-              <li><a href="/spins">Recent Spins</a></li>
-              <li><a href="/shows">Shows</a></li>
-              <li><a href="/partners">Community Partners</a></li>
-              <li><a href="/jobs">Jobs</a></li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-
-      <div class="pure-g-r">
-        <div class="pure-u-5-5">
-          <h1 class="main-title">WEFT 90.1 fm</h1>
-          <h2 class="main-sub-title">listener-supported, volunteer operated, community radio since 1981</h2>
-        </div>
-      </div>
-    </header>
-
-        <div class="content-container masthead">
-      <h2>Support WEFT</h2>
-      <p class="lead">We warmly welcome your support of any amount. Certain levels of support are eligable for gifts while supplies last after the most recent pledge drive.</p>
+---
+layout: default
+---
+    <div class="content-container masthead">
+      <h2>Spring 2014 Pledge Drive</h2>
+      <p class="lead">We warmly welcome your support of any amount. Certain levels of support provide benefits.</p>
       <ul class="support-gift-list">
         <li><strong>$40 level</strong>: become a new member or renew your annual membership</li>
         <li><strong>$65 level</strong>: choose one of three gifts</li>
@@ -286,43 +243,13 @@
       <div class="support_clear">&nbsp;</div>
 
       <div class="supportOptionNumber">2</div><h3 class="supportOptionHeader">&nbsp;Donate by phone</h3>
-      <p class="lead">Call the station manager at <a href="tel:217-359-9338">217-359-9338</a> to make your pledge over the phone.</p>
+      <p class="lead">Call us at <a href="tel:217-359-9338">217-359-9338</a> and our pledge drive support volunteers can take your pledge over the phone.</p>
       <div class="support_clear">&nbsp;</div>
       <div class="supportOptionNumber">3</div><h3 class="supportOptionHeader">&nbsp;Donate by mail</h3>
       <p class="lead">Print &amp; fill out our <a href="../downloads/donation_form_spring_2014.pdf">donation form</a> and include it with your check. Make checks payable to WEFT, and mail them to:</p>
       <p class="lead address">WEFT<br>P.O. Box 1223<br>Champaign, IL 61824</p>
       <div class="support_clear">&nbsp;</div>
       <div class="supportOptionNumber">4</div><h3 class="supportOptionHeader">&nbsp;Donate in person</h3>
-      <p class="lead">Stop by the station, located in downtown Champaign (<a href="https://www.google.com/maps/place/113+N+Market+St/@40.1168357,-88.2418623,17z/data=!3m1!4b1!4m2!3m1!1s0x880cd74c0620ba89:0xc97d39bd7fab4d21">map</a>), and our station manager can take your pledge in person. We're located at:</p>
+      <p class="lead">Stop by the station, located in downtown Champaign (<a href="https://www.google.com/maps/place/113+N+Market+St/@40.1168357,-88.2418623,17z/data=!3m1!4b1!4m2!3m1!1s0x880cd74c0620ba89:0xc97d39bd7fab4d21">map</a>), and our pledge drive support volunteers can take your pledge in person. We're located at:</p>
       <p class="lead address">113 North Market St.<br>Champaign, IL 61820</p>
     </div>
-
-    <footer>
-      <p>WEFT 90.1 fm  &middot; 113 N Market St, Champaign, IL 61820  &middot; P.O. Box 1223, Champaign, IL 61824  &middot; 217-359-9338  &middot; <a href="mailto:stationmanager@weft.org">StationManager@weft.org</a></p>
-      <ul>
-        <li><a href="https://twitter.com/WEFTradio"><i class="fa fa-twitter-square"></i> WEFT on Twitter</a></li>
-        <li><a href="https://www.facebook.com/weftcommunityradio"><i class="fa fa-facebook-square"></i> WEFT on Facebook</a></li>
-      </ul>
-    </footer>
-
-    <!-- end user-viewable page content, begin javascript -->
-
-    <!-- Piwik -->
-    <script type="text/javascript">
-      var _paq = _paq || [];
-      _paq.push(['trackPageView']);
-      _paq.push(['enableLinkTracking']);
-      (function() {
-        var u=(("https:" == document.location.protocol) ? "https" : "http") + "://new.weft.org/piwik/";
-        _paq.push(['setTrackerUrl', u+'piwik.php']);
-        _paq.push(['setSiteId', 1]);
-        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript';
-        g.defer=true; g.async=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-      })();
-    </script>
-    <noscript><p><img src="http://new.weft.org/piwik/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
-    <!-- end Piwik -->
-
-  </body>
-
-</html>
