--- a/sandbox/new-nav-bar/index.html
+++ b/sandbox/new-nav-bar/index.html
@@ -1,21 +1,7 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Sandbox: new WEFT nav bar</title>
-    <meta name="description" content="">
-    <meta name="author" content="Brian Zelip">
-    <meta name="keywords" content="">
-    <meta property="og:title" content="">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="http://">
-    <meta property="og:image" content="http://">
-    <link rel="canonical" href="">
-  </head>
-  <body>
+---
+layout: sndbx
+title: new-nav-bar
+---
     <header>
       <nav>
         <ul class="nav">
