--- a/sandbox/new-grid/index.html
+++ b/sandbox/new-grid/index.html
@@ -66,7 +66,7 @@
           			<script src="//spinitron.com/js/npwidget.js"></script>
 							</section><!-- /.spinitron-feed-->
 						</div><!-- /column full -->
-					</div><!-- /.row -->
+					</div><!-- /.row (an embedded row) -->
 
 				</div><!-- /column two-thirds -->
 
@@ -104,7 +104,6 @@
 						</article>
 					</aside><!-- /.events -->
 				</div><!-- /column one-third -->
-
 			</div><!-- /.row -->
 
 			<div class="row clearfix">
