--- a/support/index-fall-2014.html
+++ b/support/index-fall-2014.html
@@ -75,7 +75,7 @@ layout: default
           <div class="support-action-container">
             <div class="support-action">
               <h3>$40</h3>
-              <p>Basic Membership Level</p>
+              <p>New/renew membership</p>
               <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="hosted_button_id" value="XF3GBBDJCX6YY">
                 <div class="support_paypal_button">
@@ -90,10 +90,11 @@ layout: default
           <div class="support-action-container">
             <div class="support-action">
               <h3>$65</h3>
+              <p>Membership + a basic gift</p>
               <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="hosted_button_id" value="U4DJGPFHB85K2">
                 <input type="hidden" name="on0" value="Gift 1">
-                <div>Choose gift 1</div>
+                <div>Select gift</div>
                 <select name="os0">
                   <option value="No gift">No gift</option>
                   <option value="Ball Cap">Ball Cap</option>
@@ -122,6 +123,9 @@ layout: default
           <div class="support-action-container">
             <div class="support-action">
               <h3>$90.10</h3>
+              <p>Chef Ra apron</p>
+              <p>OR</p>
+              <p>choose two basic gifts</p>
               <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="paypal"><input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="hosted_button_id" value="G4TGD6TU3GNAN">
                 <input type="hidden" name="on0" value="Gift 1">
