--- a/sandbox/prose/index.html
+++ b/sandbox/prose/index.html
@@ -12,6 +12,6 @@
     <meta name="author" content="Brian Zelip">
   </head>
   <body>
-    <h1>hello</h1>
+    <h1>Let's see what it's like to change a file via Prose.</h1>
   </body>
 </html>
