--- a/sandbox/fullCalendar/index.html
+++ b/sandbox/fullCalendar/index.html
@@ -1,16 +1,18 @@
 ---
 layout: sndbx-fullCalendar
 ---
-<header>
-      <h1>WEFT shows schedule</h1>
-      <a href="#">Download a copy of our schedule as a pdf.</a>
-    </header>
-
-    <main>
-      <div class="container">
-        <div id='calendar'></div>
+    <div class="content-container">
+      <div class="pure-g-r">
+        <div class="pure-u-5-5">
+          <h3 class="page-title">Weekly show schedule</h3>
+          <h4 class="page-subtitle"><a title="Weekly Schedule" href="../downloads/WEFT-Oct2013-Grid.pdf">Download a PDF of the Weekly Schedule</a>.</h4>
+        </div>
       </div>
-    </main>
+    </div>
+
+    <div class="calendar-wrapper">
+      <div id='calendar'></div>
+    </div>
 
     {% include footer.html %}
     
@@ -18,11 +20,25 @@ layout: sndbx-fullCalendar
     <script src="/libs/moment/moment.js"></script>
     <script src="/libs/fullcalendar/dist/fullcalendar.min.js"></script>
     <script src="/libs/fullcalendar/dist/gcal.js"></script>
+    <script src="calendar.js"></script>
+    <!--
     <script>
       $('#calendar').fullCalendar({
         googleCalendarApiKey: 'AIzaSyBxOpohnRm5SJOLdw7r_PeDcTfUafdlTMc',
         events: {
           googleCalendarId: 'weftwebteam@gmail.com'
+        },
+        windowResize : function(view) {
+          if ($(window).width() < 700) {
+            $('#calendar').fullCalendar('changeView', 'agendaDay', {
+              header: {
+                right: ''
+              }
+            });
+          } else {
+            $('#calendar').fullCalendar('changeView', 'agendaWeek');
+          }
+          // modify the header (remove options for month and week and remove title)
         },
         header: {
           left: 'prev,next today',
@@ -34,6 +50,6 @@ layout: sndbx-fullCalendar
         eventTextColor: 'black',
         height: 'auto',
         defaultView: 'agendaWeek',
-        allDaySlot: false
+        allDaySlot: false,
       });
-    </script>
+    </script>-->
