finally got the flexbox dropdown system working

--- a/sandbox/new-layout/index.html
+++ b/sandbox/new-layout/index.html
@@ -35,20 +35,55 @@
       <nav class="bg-dark-gray mt2 mb2">
         <div class="container">
           <div class="clearfix">
-            <div class="global-nav">
-              <a href="" class="global-nav--root">Home</a>
-              <a href="" class="global-nav--root">Listen Live</a>
-              <a href="" class="global-nav--root">Support</a>
-              <a href="" class="global-nav--root">Spins</a>
-              <a href="" class="global-nav--root">About</a>
-              <a href="" class="global-nav--root">Contact</a>
-              <a href="" class="global-nav--root">Jobs</a>
-            </div>
+            <ul class="global-nav">
+              <li class="global-nav--item-wrapper">
+                <a href="" class="global-nav--item">Home</a>
+              </li>
+              <li class="global-nav--item-wrapper">
+                <a href="" class="global-nav--item">Listen Live</a>
+                <ul class="global-nav--dropdown">
+                  <li class="global-nav--dropdown-item-wrapper">
+                    <a href="" class="global-nav--dropdown-item">hello there</a>
+                  </li>
+                  <li class="global-nav--dropdown-item-wrapper">
+                    <a href="" class="global-nav--dropdown-item">hello there</a>
+                  </li>
+                  <li class="global-nav--dropdown-item-wrapper">
+                    <a href="" class="global-nav--dropdown-item">hello there</a>
+                  </li>
+                  <li class="global-nav--dropdown-item-wrapper">
+                    <a href="" class="global-nav--dropdown-item">hello there</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="global-nav--item-wrapper">
+                <a href="" class="global-nav--item">Support</a>
+              </li>
+              <li class="global-nav--item-wrapper">
+                <a href="" class="global-nav--item">Spins</a>
+              </li>
+              <li class="global-nav--item-wrapper">
+                <a href="" class="global-nav--item">About</a>
+              </li>
+              <li class="global-nav--item-wrapper">
+                <a href="" class="global-nav--item">Contact</a>
+              </li>
+              <li class="global-nav--item-wrapper">
+                <a href="" class="global-nav--item">Jobs</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
 
     </header>
+
+    <main>
+      <div class="container">
+        <h1 class="m0">hello</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio doloremque repellat itaque, maxime sint deserunt eos quisquam! Nihil nulla voluptas rerum, voluptates numquam blanditiis quae unde, qui quas, nobis, laudantium!</p>
+      </div>
+    </main>
 
   </body>
 
